...
      _reply = "";
    });
    StoreRequest req = StoreRequest(
        _currentWasteType, double.parse(_textControllerWeight.text));

    String msg = req.toQAKString("smartdevice", "wasteservice", 3);
    _logMessage("Store Request: $msg");
    widget.connection.sendMessage(msg);

    if (timeout != null) {
      _startTimer();
    }
  }
...
                                  ? 'Request Parameters'
                                  : 'Message Content',
                              style: TextStyle(fontSize: 26.0),
                            ),
                            widget.settings.isDefault()
                                ? DropdownButtonFormField<String>(
                                    key: const ValueKey('parameterWasteType'),
                                    value: _currentWasteType,
                                    items: _wasteTypes
                                        .map<DropdownMenuItem<String>>(
                                            (String value) {
                                      return DropdownMenuItem(
                                          value: value, child: Text(value));
...
                                      setState(() {
                                        _currentWasteType = newValue!;
                                      });
                                    },
                                    decoration: const InputDecoration(
                                      border: UnderlineInputBorder(),
                                      labelText: 'Waste Type',
                                    ),
                                  )
                                : const SizedBox.shrink(),
                            widget.settings.isDefault()
                                ? TextFormField(
                                    key: const ValueKey('parameterWasteWeight'),
                                    validator: (value) {
                                      if (value == null ||
                                          !_checkWeight(value)) {
                                        return 'Invalid weight';
                                      }
                                      return null;
...
                                      )
                                    ],
                                    decoration: const InputDecoration(
                                      suffixText: 'KG',
                                      hintText: 'Weight',
                                      border: UnderlineInputBorder(),
                                      labelText: 'Waste Weight',
                                    ),
                                  )
                                : TextFormField(
                                    key: const ValueKey(
                                        'parameterMessageReceiver'),
                                    autovalidateMode:
...
            ),
          ),
        ),
        floatingActionButton: Padding(
          padding: const EdgeInsets.only(top: 32.0, left: 32.0, right: 32.0),
          child: ElevatedButton(
            key: const ValueKey('sendStoreRequest'),
            onPressed: _waitingReply
                ? null
                : () {
                    if (_formKeyRequest.currentState!.validate()) {
                      if (widget.settings.isDefault()) {
                        // Add '.0' or '0' to the weight, in case it's missing
...
